# ChangeLog for app-misc/hammertime
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  19 Mar 2012; James Rowe <jnrowe@gmail.com> hammertime-0.2.4.ebuild:
  Switched to EAPI4.

  03 Mar 2012; James Rowe <jnrowe@gmail.com> hammertime-0.2.4.ebuild:
  Removed Python 2.4 support.

  03 Mar 2012; James Rowe <jnrowe@gmail.com> -hammertime-0.1.4.ebuild:
  Removed stale ebuild, newer version will be available for stabilisation
  around the same time.

  01 Feb 2012; James Rowe <jnrowe@gmail.com> hammertime-0.1.4.ebuild:
  Removed old src_prepare, README.md hasn't been included since 0.1.3.

*hammertime-0.2.4 (01 Feb 2012)

  01 Feb 2012; James Rowe <jnrowe@gmail.com> +hammertime-0.2.4.ebuild:
  Version bump [531].

  25 Nov 2011; James Rowe <jnrowe@gmail.com> -hammertime-0.1.3.ebuild:
  Removed stale ebuild, 0.1.4 is eligible for stabilisation before 0.1.3 will
  be eligible again.

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

*hammertime-0.1.4 (26 Oct 2011)

  26 Oct 2011; James Rowe <jnrowe@gmail.com> +hammertime-0.1.4.ebuild:
  Version bump [489].

  13 Sep 2011; James Rowe <jnrowe@gmail.com> hammertime-0.1.3.ebuild:
  Dropped keywords for dep switch.

  21 Mar 2011; James Rowe <jnrowe@gmail.com> -hammertime-0.1.2.ebuild,
  hammertime-0.1.3.ebuild:
  Keyworded x86.

  21 Mar 2011; James Rowe <jnrowe@gmail.com> hammertime-0.1.3.ebuild:
  Keyworded amd64.

  13 Mar 2011; James Rowe <jnrowe@gmail.com> hammertime-0.1.2.ebuild:
  Keyworded x86.

  04 Mar 2011; James Rowe <jnrowe@gmail.com> hammertime-0.1.2.ebuild,
  hammertime-0.1.3.ebuild:
  Make use of jnrowe-pypi S mangling.

  04 Mar 2011; James Rowe <jnrowe@gmail.com> hammertime-0.1.2.ebuild:
  Keyworded amd64.

*hammertime-0.1.3 (15 Feb 2011)

  15 Feb 2011; James Rowe <jnrowe@gmail.com> +hammertime-0.1.3.ebuild:
  Version bump [273].

  11 Feb 2011; James Rowe <jnrowe@gmail.com> hammertime-0.1.2.ebuild:
  Keyworded ~x86.
